--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ SUPER_USER_USERNAME = 'sheerif'
 
 
 # Production Host
-HOST = "https://social079521.herokuapp.com"
+HOST = "https://geeks--hub.herokuapp.com"
