--- a/.env
+++ b/.env
@@ -1,20 +1,20 @@
 # App Secret Key
-SECRET_KEY = "django-insecure-iuzau$6qx*33l8#sbz#lr^tevt7_*03wan@5f3hkau7@-u!k4z"
+SECRET_KEY = "****"
 
 
-CLOUDINARY_STORAGE_CLOUD_NAME = "geekshub"
-CLOUDINARY_STORAGE_API_KEY = "225179763565865"
-CLOUDINARY_STORAGE_API_SECRET = "PIVReQE11A0oYuznkZ5-8NQzKhA"
-CLOUDINARY_URL = "cloudinary://225179763565865:PIVReQE11A0oYuznkZ5-8NQzKhA@geekshub"
+CLOUDINARY_STORAGE_CLOUD_NAME = "****"
+CLOUDINARY_STORAGE_API_KEY = "****"
+CLOUDINARY_STORAGE_API_SECRET = "****"
+CLOUDINARY_URL = "****"
 
 
 # Production Host
-HOST = "https://geeks--hub.herokuapp.com"
+HOST = "****"
 
 # SMTP Configration
-EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
+EMAIL_BACKEND = '****'
 EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
 EMAIL_HOST_USER = 'sheerif.abdullah@gmail.com'
-EMAIL_HOST_PASSWORD = 'ameame2005'
+EMAIL_HOST_PASSWORD = '****'
