--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,28 @@
-asgiref==3.5.0
+asgiref==3.5.2
 backports.zoneinfo==0.2.1
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
 cloudinary==1.29.0
-cryptography==36.0.2
+cryptography==37.0.4
 defusedxml==0.7.1
-dj-database-url==0.5.0
-Django==4.0.3
-django-admin-interface==0.19.0
-django-allauth==0.50.0
+Django==4.1
+django-allauth==0.51.0
 django-cloudinary-storage==0.3.0
-django-colorfield==0.6.3
-django-flat-responsive==2.0
-django-flat-theme==1.1.4
-django-heroku==0.3.1
-gunicorn==20.1.0
+django-jazzmin==2.5.0
 idna==3.3
+mysqlclient==2.1.1
 oauthlib==3.2.0
-Pillow==9.1.0
-psycopg2==2.9.3
+Pillow==9.2.0
+pkg_resources==0.0.0
 pycparser==2.21
-PyJWT==2.3.0
-python-dotenv==0.19.2
+PyJWT==2.4.0
+python-dotenv==0.20.0
 python3-openid==3.2.0
-requests==2.27.1
+requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.2
-urllib3==1.26.9
-whitenoise==6.0.0
+tzdata==2022.1
+urllib3==1.26.10
+whitenoise==6.2.0
