--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY = "django-insecure-iuzau$6qx*33l8#sbz#lr^tevt7_*03wan@5f3hkau7@-u!k4z"
 EMAIL_HOST_PASSWORD = "gyzpxokdqwnkrypj"
 CSRF_TRUSTED_ORIGINS = "https://geekshub.run-eu-central1.goorm.io"
-DEBUG = False
-PRODUCTION = True
+DEBUG = True
+PRODUCTION = false
